--- a/static/css/dispatch/schedule.css
+++ b/static/css/dispatch/schedule.css
@@ -51,6 +51,7 @@
 .scheduleTableBox {
     width: 100%;
     height: 76rem;
+    position: relative;
 }
 
 .scheduleTableHeader {
@@ -82,8 +83,13 @@
 }
 
 .scheduleTableHeader td:nth-child(14) {
-    width: 16.48%;
+    width: 8%;
 }
+
+.scheduleTableHeader td:nth-child(15) {
+    width: 8.48%;
+}
+
 
 .scheduleTableCell {
     position: relative;
@@ -150,12 +156,27 @@
     box-sizing: border-box;
 }
 
+.tdStatus {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 8%;
+    height: 100%;
+    border-right: 0.1rem solid #CDCDCE;
+    border-bottom: 0.1rem solid #CDCDCE;
+    font-size: 1.4rem;
+    color: #7A7A7A;
+    cursor: pointer;
+    box-sizing: border-box;
+}
+
 .tdDriver {
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    width: 16.48%;
+    width: 8.48%;
     height: 100%;
     border-right: none;
     border-bottom: 0.1rem solid #CDCDCE;
@@ -351,4 +372,13 @@
 
 .PopupBtnBox div {
     background-color: #444444;
+}
+
+.timeline {
+    z-index: 30;
+    position: absolute;
+    top: 3.6rem;
+    width: 0.1rem;
+    height: calc(100% - 4.6rem);
+    border-left: 0.5rem solid #1C1A4E;
 }
