--- a/templates/base.html
+++ b/templates/base.html
@@ -28,8 +28,8 @@
 
       <!--sidemenuLogo-->
       <div class="logoBox">
-        <a href="{% url 'home' %}">
-          <img src="{% static 'images/TRPlogo.png' %}" alt="">
+        <a href="{% url 'home' %}" style="color: white; font-size: 5rem;">
+          DEV
         </a>
       </div>
 
