운행확인 수정

--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
       <!--sidemenuLogo-->
       <div class="logoBox">
         <a href="{% url 'home' %}" style="color: white; font-size: 5rem;">
-          DEV
+          <img src="{% static 'images/TRPlogo.png' %}" alt="">
         </a>
       </div>
 
