--- a/templates/base.html
+++ b/templates/base.html
@@ -200,10 +200,26 @@
             </li>
           </div>
           <div class="nav1Box">
-            <li class="nav1BoxMenu">
+            <li class="nav1BoxMenu nav1BoxMenuHaveDepth2">
               <img src="{% static 'images/dispatchSystem.png' %}" alt="배차시스템 아이콘">
-              <a href="{% url 'dispatch:schedule' %}" class="nonDepth2Menu">운행확인</a>
+              <div>배차시스템</div>
+              <svg xmlns="http://www.w3.org/2000/svg" width="18.228" height="11.84" viewBox="0 0 18.228 11.84">
+                <path id="패스_256" data-name="패스 256" d="M0,0,6.753,8.223,14,0" transform="translate(2.111 2.117)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+              </svg>            
             </li>
+            <div class="sideMenuNav2Box">
+              <ul class="sideMenuNav2">
+                <a href="{% url 'dispatch:order' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">일반배차</li>
+                </a>
+                <a href="{% url 'dispatch:regularly' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">출/퇴근배차</li>
+                </a>
+                <a href="{% url 'dispatch:schedule' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">운행확인</li>
+                </a>
+              </ul>
+            </div>
           </div>
           <div class="nav1Box">
             <li class="nav1BoxMenu">
