배차거부관리 화면 생성
view에 RefusalList, refusal_delete 추가
출퇴근배차 노선 검색 안되던 부분 수정
ConnectRefusal에 route 추가

--- a/dispatch/templates/dispatch/regularly.html
+++ b/dispatch/templates/dispatch/regularly.html
@@ -185,7 +185,7 @@
   <div class="mainLayout">
 
     <div class="toolbar">
-      <input type="text" placeholder="노선명" name="search" class="">
+      <input type="text" placeholder="노선명" value="{{search}}" name="search" class="searchInput">
       <input autocomplete="off" type="date" name="date" class="searchDate" max="9999-12-31">
       <div class="dateControllBtnBox">
         <div class="dateToday">오늘</div>
@@ -522,7 +522,8 @@
 <script>
 
   function dateSearch(){
-    targetLink = `${window.location.href.split("?")[0]}?group=${urlGroup}&date=${searchDate.value}`
+    const search = document.querySelector(".searchInput")
+    targetLink = `${window.location.href.split("?")[0]}?search=${search.value}&group=${urlGroup}&date=${searchDate.value}`
     location.href = targetLink
   }
 
