--- a/templates/base.html
+++ b/templates/base.html
@@ -83,7 +83,10 @@
                   <li class="sideMenuNav2Menu">출/퇴근 노선관리</li>
                 </a>
                 <a href="{% url 'dispatch:schedule' %}" class="sideMenuNav2Link">
-                  <li class="sideMenuNav2Menu">운행확인</li>
+                  <li class="sideMenuNav2Menu">운행/배차확인</li>
+                </a>
+                <a href="{% url 'dispatch:refusal' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">배차거부관리</li>
                 </a>
               </ul>
             </div>
