title 신성화 TRP로 변경

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <!-- <meta http-equiv="Cache-Control" content="private, no-cache, no-store, max-age=0, must-revalidate"> -->
-  <title>TRP</title>
+  <title>신성화 TRP</title>
   <link href="{% static 'css/setting/setting.css' %}" rel="stylesheet" type="text/css" />
   <link href="{% static 'css/base.css' %}" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="{% static 'images/tilteIcon.png' %}">
