민원관리 추가, 민원관리 - 상담신청관리 완료
상담신청관리 화면, 상태 저장, 삭제 기능 완료
상담신청, 차량점검신청, 차량점검신청파일 모델 생성
민원관리 complaint 앱 추가
차량점검신청 해야됨

--- a/templates/base.html
+++ b/templates/base.html
@@ -176,6 +176,25 @@
             </div>
           </div>
           <div class="nav1Box">
+            <li class="nav1BoxMenu nav1BoxMenuHaveDepth2">
+              <img src="{% static 'images/document.png' %}" alt="공지사항 아이콘">
+              <div>민원관리</div>
+              <svg xmlns="http://www.w3.org/2000/svg" width="18.228" height="11.84" viewBox="0 0 18.228 11.84">
+                <path id="패스_256" data-name="패스 256" d="M0,0,6.753,8.223,14,0" transform="translate(2.111 2.117)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+              </svg>        
+            </li>
+            <div class="sideMenuNav2Box">
+              <ul class="sideMenuNav2">
+                <a href="{% url 'complaint:consulting' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">상담신청관리</li>
+                </a>
+                <a href="{% url 'complaint:vehicle_inspection' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">차량정비신청관리</li>
+                </a>
+              </ul>
+            </div>
+          </div>
+          <div class="nav1Box">
             <li class="nav1BoxMenu">
               <img src="{% static 'images/calendar.png' %}" alt="일정 아이콘">
               <a href="{% url 'crudmember:setting_client' %}" class="nonDepth2Menu">거래처 관리</a>
