--- a/templates/base.html
+++ b/templates/base.html
@@ -189,7 +189,7 @@
                 <a href="{% url 'complaint:consulting' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">상담신청관리</li>
                 </a>
-                <a href="{% url 'complaint:vehicle_inspection' %}" class="sideMenuNav2Link">
+                <a href="{% url 'complaint:inspection' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">차량정비신청관리</li>
                 </a>
               </ul>
