급여관리 - 직급수당 > 성과급 으로 수정, 필드명 수정

--- a/humanresource/templates/HR/salary_detail.html
+++ b/humanresource/templates/HR/salary_detail.html
@@ -196,8 +196,8 @@
                     <tr>
                         <td class="titleTd">일반수당</td>
                         <td class="printComma">{{data.salary.order}}</td>
-                        <td class="titleTd">직급수당</td>
-                        <td class="printComma">{{data.salary.position_allowance}}</td>
+                        <td class="titleTd">성과급</td>
+                        <td class="printComma">{{data.salary.performance_allowance}}</td>
                     </tr>
                     <tr>
                         <td class="titleTd">추가수당</td>
