--- a/humanresource/templates/HR/salary_list.html
+++ b/humanresource/templates/HR/salary_list.html
@@ -52,7 +52,7 @@
                     <td class="table-list_head-tr_td">기본급</td>
                     <td class="table-list_head-tr_td">근속수당</td>
                     <td class="table-list_head-tr_td">연차수당</td>
-                    <td class="table-list_head-tr_td">직급수당</td>
+                    <td class="table-list_head-tr_td">성과급</td>
                     <td class="table-list_head-tr_td">식대</td>
                     <td class="table-list_head-tr_td">출근수당</td>
                     <td class="table-list_head-tr_td">퇴근수당</td>
@@ -89,7 +89,7 @@
                         <input type="text" class="amountInput length100" value="{{salary.annual_allowance}}">
                     </td>
                     <td class="table-list_body-tr_td">
-                        <input type="text" class="amountInput length100" value="{{salary.position_allowance}}">
+                        <input type="text" class="amountInput length100" value="{{salary.performance_allowance}}">
                     </td>
                     <td class="table-list_body-tr_td">
                         <input type="text" class="amountInput length100" value="{{salary.meal}}">
@@ -319,7 +319,7 @@
 
 
     function loadPrevMonthlyBase() {
-        if (confirm('저번달 기본급, 근속수당, 연차수당, 직급수당, 식대를 불러오시겠습니까?')) {
+        if (confirm('저번달 기본급, 근속수당, 연차수당, 성과급, 식대를 불러오시겠습니까?')) {
             loadForm.action = "{% url 'HR:salary_load' %}"
             loadForm.submit()
         }
