--- a/templates/base.html
+++ b/templates/base.html
@@ -249,6 +249,12 @@
               <a href="{% url 'HR:salary' %}" class="nonDepth2Menu">급여관리</a>
             </li>
           </div>
+          <div class="nav1Box">
+            <li class="nav1BoxMenu">
+              <img src="{% static 'images/calendar.png' %}" alt="일정 아이콘">
+              <a href="{% url 'crudmember:setting_client' %}" class="nonDepth2Menu">거래처 관리</a>
+            </li>
+          </div>
         </ul>
         {% else %}
         <ul class="sideMenuNav1">
