2주전 배차 1일전 배차로 변경

--- a/dispatch/templates/dispatch/regularly.html
+++ b/dispatch/templates/dispatch/regularly.html
@@ -335,7 +335,7 @@
           <div class="last">
             <label for="">지난배차</label>
             <div class="btnModules loadConnectBtn1">1주전</div>
-            <div class="btnModules loadConnectBtn2">2주전</div>
+            <div class="btnModules loadConnectBtn2">1일전</div>
             <div class="btnModules dispatchHistory">배차내역</div>
           </div>
           <div class="Tools">
