--- a/templates/base.html
+++ b/templates/base.html
@@ -81,6 +81,9 @@
                 <a href="{% url 'dispatch:regularly_route' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">출/퇴근 노선관리</li>
                 </a>
+                <a href="{% url 'dispatch:regularly_route_know' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">출/퇴근 노선숙지</li>
+                </a>
                 <a href="{% url 'dispatch:schedule' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">운행/배차확인</li>
                 </a>
