노선숙지 검색 js 조금 수정, 노선숙지 팀장급에서 볼 수 있게 수정

--- a/templates/base.html
+++ b/templates/base.html
@@ -241,6 +241,9 @@
                 <a href="{% url 'dispatch:regularly' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">출/퇴근배차</li>
                 </a>
+                <a href="{% url 'dispatch:regularly_route_know' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">출/퇴근 노선숙지</li>
+                </a>
                 <a href="{% url 'dispatch:schedule' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">운행확인</li>
                 </a>
