--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1114,7 +1114,65 @@ html::-webkit-scrollbar-track {
   font-size: 1.4rem;
 }
 
+.excelUploadPopupContainer {
+  width: 50rem;
+}
 
+.excelUploadPopupSection {
+  height: calc(100% - 7.2rem);
+}
+
+.excelUploadPopupFooter {
+  position: relative;
+}
+
+.excelUploadPopupArticleFileDouble {
+  width: 100%;
+  height: 2.6rem;
+}
+
+.popupFooterMinibox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 32rem;
+  margin-right: auto;
+}
+
+.visibleLoadingBox {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding-left: 1rem;
+  width: calc(100% - 8rem);
+  box-sizing: border-box;
+}
+
+.visibleLoading {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  display: none;
+  font-size: 1.6rem;
+}
+
+.visibleLoading span {
+  margin-right: 0.6rem;
+}
+
+.popupCloseBtn {
+  background-color: #444;
+  margin-left: 1rem;
+}
+
+.backgroundBlack {
+  background-color: #444;
+}
+
+
+.marginR1 {
+  margin-right: 1em;
+}
 @media all and (min-width:1460px) and (max-width: 1600px) {
   html {
     font-size: 52%;
