--- a/static/css/humanresource/member.css
+++ b/static/css/humanresource/member.css
@@ -7,7 +7,7 @@
     margin-left: 2rem;
 }
 
-.addPeople {
+.headerBtn {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -18,6 +18,11 @@
     font-size: 1.4rem;
     color: white;
     cursor: pointer;
+    margin-left: 1rem;
+}
+
+.addPeople {
+    background-color: #0069D9;
 }
 
 .inputModules[name=use],
@@ -288,6 +293,14 @@ td:nth-child(13) {
 .btnModulesCreate{
     background-color: #0069D9;
     margin-right: 1rem;
+}
+
+.headerFlex {
+    display: flex;
+}
+
+.popupArticleFileDoubleExcel {
+    width: 100%;
 }
 
 
